# cpp-black

./: .clang-format  .gitignore  LICENSE
lib/: test_runner.h
prohibited-domains/: README.md  ok.cpp
week-1/addition-without-overflow/: solution.cpp
week-1/personal-budget/: budget.cpp
week-1/prohibited-domains/: README.md  domains.cpp  input.txt  san_fail.cpp
week-1/transport-catalog/: README.md
week-1/transport-catalog-part-e/: CMakeLists.txt  descriptions.cpp  descriptions.h  graph.h  json.cpp  json.h  main.cpp  requests.cpp  requests.h  router.h  sphere.cpp  sphere.h  transport_catalog.cpp  transport_catalog.h  transport_router.cpp  transport_router.h  utils.h
week-1/transport-catalog-part-f/: CMakeLists.txt  main.cpp  original.cpp  svg.h  test_runner.h  tests.cpp
week-1/transport-catalog-part-g/: CMakeLists.txt  descriptions.cpp  descriptions.h  graph.h  json.cpp  json.h  main.cpp  renderer.cpp  requests.cpp  requests.h  router.h  tests.cpp  transport_catalog.cpp  transport_catalog.h  transport_router.cpp  transport_router.h  utils.h
week-1/transport-catalog-part-g/original/: descriptions.cpp  descriptions.h  main.cpp  map_renderer.cpp  map_renderer.h  sphere_projection.cpp  transport_catalog.cpp  utils.h
week-1/transport-catalog-part-h/: descriptions.cpp  json.h  renderer.h  requests.h  sphere.cpp  sphere.h  svg.h  tests.cpp  transport_router.h
week-1/transport-catalog-part-h/original/: map_renderer.cpp  map_renderer.h  svg.h  transport_catalog.h  transport_router.h
week-1/transport-catalog-part-i/: descriptions.h  graph.h  renderer.cpp  renderer.h  router.h  svg.h  tests.cpp  transport_router.cpp
week-1/transport-catalog-part-i/original/: descriptions.cpp  descriptions.h  json.cpp  json.h  map_renderer.cpp  map_renderer.h  requests.cpp  requests.h  sphere_projection.h  svg.cpp  utils.cpp
week-1/transport-catalog/origin/: graph.h  router.h
week-1/transport-catalog/solution/: router.h  sphere.h.gch  transport_router.cpp
week-2/json-printer/: CMakeLists.txt  main.cpp  original.cpp
week-2/phone-book/: CMakeLists.txt  iterator_range.h  main.cpp  phone_book.cpp  phone_book.h
week-2/phone-book/origin/: CMakeLists.txt  address_book.cpp  address_book.h  contact.proto  main.cpp
week-2/saveload/: CMakeLists.txt  main.cpp  original.h  saveload.h
week-2/yellow-pages/: CMakeLists.txt  merge.cpp  origin.cpp
week-3/mython-lexer/: CMakeLists.txt  lexer.cpp  lexer.h  lexer_test.cpp  test_runner.h
week-3/mython-lexer/origin/: lexer.cpp  lexer.h
week-3/nucleotide/: CMakeLists.txt  main.cpp  nucleotide.h  origin.cpp
